refactor login css

--- a/public_html/frontend/css/login.css
+++ b/public_html/frontend/css/login.css
@@ -40,6 +40,9 @@ main .form #phoneNumber {
   border-radius: 10px;
   appearance: none;
 }
+main .form #phoneNumber::placeholder,main .form #phoneNumber:focus {
+    text-align: center;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   /* display: none; <- Crashes Chrome on hover */
