--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -23,7 +23,7 @@ main {
   padding: 20px;
 }
 #mainContent .features p {
-  font-size: 15px;
+  font-size: 1rem;
 }
 /* Course Season */
 #mainContent .season .totalDet {
