refactor styles of qa component

--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -167,7 +167,10 @@ main {
   );
   border-radius: 20px;
   margin: 4% 0;
-  padding: 20px;
+}
+
+#questions .newQ textarea::placeholder {
+    color: #fff;
 }
 #questions .newQ input,
 textarea {
