--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -389,6 +389,19 @@ textarea {
   backdrop-filter: blur(10px);
   z-index: 1;
 }
+
+.courseDet .afterAddedToBasketBtn {
+    background:#3b82f6 ;
+    border-radius: 20px;
+    border: 1px solid #3b82f6;
+
+}
+
+.courseDet .afterAddedToBasketBtn:hover {
+
+    background: transparent;
+
+}
 iframe {
   width: 100%;
   height: 200px;
