--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -205,6 +205,48 @@ header {
   color: var(--primary-color);
 }
 
+/* profile */
+.profile img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border: 3px solid var(--primary-color);
+}
+.profile .popover {
+    display: none;
+    min-width: 250px;
+    left: 10px;
+    bottom: -330px;
+    overflow: hidden;
+}
+.profile .popover.active {
+    display: block;
+}
+.profile .popover > div {
+    border-bottom: 1px dashed var(--primary-color);
+    margin: 0 20px;
+}
+
+.profile .popover  h6,.profile .popover h6+p {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 23px;
+    width: 140px;
+}
+
+
+.profile .popover > ul > li {
+    width: 100%;
+    transition: all 0.4s;
+}
+.profile .popover > ul > li:hover {
+    background-color: #20222f;
+}
+
+
+
 @media screen and (min-width: 425px) {
   .mobileMenu{
     width: 250px;
