--- a/public_html/frontend/css/roadmap.css
+++ b/public_html/frontend/css/roadmap.css
@@ -65,7 +65,7 @@ color:#f16529 ;
 }
 
 #mainRoadmap .RoadCourse .course-title-css {
-    color: #f16529;
+    color: #33a9db;
 }#mainRoadmap .RoadCourse .course-title-bootstrap {
     color: #673ab7;
 }#mainRoadmap .RoadCourse .course-title-js{
