refactor discount code style in the payment.blade.php

--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -63,7 +63,7 @@ nav {
     aspect-ratio: 1;
     border-radius: 50%;
     border: 3px solid #ffffff;
-    border-right-color: #0f0233;
+    border-right-color: #303445;
     animation: l2 1s infinite linear;
 }
 
