refactor qa component in the client single course

--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -175,6 +175,10 @@ main {
   margin: 4% 0;
 }
 
+#questions .newA {
+ display: none;
+}
+
 #questions .newQ textarea::placeholder {
     color: #fff;
 }
