--- a/public_html/frontend/css/profile.css
+++ b/public_html/frontend/css/profile.css
@@ -1,5 +1,6 @@
 main {
   margin: 6% 0;
+  padding: 0 !important;
 }
 .sidebar {
   max-height: 750px;
@@ -26,7 +27,7 @@ main {
   content: "";
   position: absolute;
   top: -40px;
-  left: 4px;
+  left: 0;
   width: 50px;
   height: 40px;
   border-bottom-left-radius: 20px;
@@ -37,7 +38,7 @@ main {
   content: "";
   position: absolute;
   bottom: -40px;
-  left: 4px;
+  left: 0;
   width: 50px;
   height: 40px;
   border-top-left-radius: 20px;
