js added to financial page and sidebar font size changed

--- a/public_html/frontend/css/profile.css
+++ b/public_html/frontend/css/profile.css
@@ -53,6 +53,8 @@ main {
 .sidebar ul li a .text {
   font-weight: 700;
   color: #fff;
+  font-size: 15px;
+  white-space: nowrap;
 }
 
 /* Main Content */
