--- a/public_html/frontend/css/profile.css
+++ b/public_html/frontend/css/profile.css
@@ -1,224 +1,227 @@
 main {
-  margin: 6% 0;
-  padding: 0 !important;
+    margin: 6% 0;
+    padding: 0 !important;
 }
 .sidebar {
-  max-height: 750px;
+    max-height: 750px;
 }
 .sidebar .profileImg {
-  width: 100px;
-  margin: 4% 0;
-  border-radius: 100%;
+    width: 100px;
+    margin: 4% 0;
+    border-radius: 100%;
 }
 .sidebar > div {
-  border-bottom: 2px dashed #23bf64;
+    border-bottom: 2px dashed #23bf64;
 }
 .sidebar ul div li {
-  position: relative;
-  margin: 15px 0;
-  padding: 10px 20px;
+    position: relative;
+    margin: 15px 0;
+    padding: 10px 20px;
 }
 .sidebar ul div li.active {
-  background: #0b141b;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
+    background: #0b141b;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
 .sidebar ul div li.active::before {
-  content: "";
-  position: absolute;
-  top: -40px;
-  left: 0;
-  width: 50px;
-  height: 40px;
-  border-bottom-left-radius: 20px;
-  box-shadow: -5px 5px 0 5px #0b141b;
-  background-color: transparent;
+    content: "";
+    position: absolute;
+    top: -40px;
+    left: 0;
+    width: 50px;
+    height: 40px;
+    border-bottom-left-radius: 20px;
+    box-shadow: -5px 5px 0 5px #0b141b;
+    background-color: transparent;
 }
 .sidebar ul div li.active::after {
-  content: "";
-  position: absolute;
-  bottom: -40px;
-  left: 0;
-  width: 50px;
-  height: 40px;
-  border-top-left-radius: 20px;
-  box-shadow: -5px -5px 0 5px #0b141b !important;
-  background-color: transparent;
+    content: "";
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    width: 50px;
+    height: 40px;
+    border-top-left-radius: 20px;
+    box-shadow: -5px -5px 0 5px #0b141b !important;
+    background-color: transparent;
 }
 .sidebar ul li a {
-  display: flex;
-  align-items: center;
-  gap: 0 10px;
+    display: flex;
+    align-items: center;
+    gap: 0 10px;
 }
 .sidebar ul li a .text {
-  font-weight: 700;
-  color: #fff;
-  font-size: 15px;
-  white-space: nowrap;
+    font-weight: 700;
+    color: #fff;
+    font-size: 15px;
+    white-space: nowrap;
 }
 
 /* Main Content */
 .topMenu > div {
-  margin: 20px 0;
-  border-left: 1px dashed #23bf64;
+    margin: 20px 0;
+    border-left: 1px dashed #23bf64;
 }
 .topMenu > div:nth-last-of-type(1) {
-  border-left: 0;
+    border-left: 0;
 }
 h4 span {
-  width: 15px;
-  height: 15px;
-  background: #23bf64;
-  border-radius: 100%;
+    width: 15px;
+    height: 15px;
+    background: #23bf64;
+    border-radius: 100%;
 }
 .title {
-  border-bottom: 1px dashed #23bf64;
+    border-bottom: 1px dashed #23bf64;
 }
 
 /* Questions */
 .question {
-  border: 1px dashed #23bf64;
-  border-radius: 20px;
-  margin: 2%;
+    border: 1px dashed #23bf64;
+    border-radius: 20px;
+    margin: 2%;
 }
 /* my-course coursBTN */
 .coursbtn button {
-  background: transparent;
-  transition: all 0.2s ease-out;
+    background: transparent;
+    transition: all 0.2s ease-out;
 }
 .coursbtn button p {
-  font-size: 13px;
+    font-size: 13px;
 }
 .coursbtn button:hover {
-  background-color: #0b141b;
-  opacity: 0.8;
+    background-color: #0b141b;
+    opacity: 0.8;
 }
 .coursbtn button.active {
-  background-color: #0b141b;
-  font-weight: 700;
+    background-color: #0b141b;
+    font-weight: 700;
 }
 iframe {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 /* payment */
 .thead {
-  border-bottom: 1px solid #23bf64;
+    border-bottom: 1px solid #23bf64;
 }
 
 @media screen and (max-width: 425px) {
-  .question > img {
-    display: none;
-  }
+    .question > img {
+        display: none;
+    }
 }
 @media screen and (max-width: 768px) {
-  main {
-    margin: 100px 0;
-  }
-  .sidebar {
-    width: 300px;
-    position: absolute;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    top: 0;
-    bottom: 0;
-    right: -500px;
-    z-index: 999999;
-    transition: all 0.4s ease-in;
-    box-shadow: -9px 10px 66px -5px rgba(0, 0, 0, 0.7);
-    -webkit-box-shadow: -9px 10px 66px -5px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: -9px 10px 66px -5px rgba(0, 0, 0, 0.7);
-  }
-  .modal-backdrop{
-    z-index: 99999;
-    opacity: .5;
-  }
-  .sidebar ul div{
-    margin-right: 12px;
-  }
-  .sidebar ul li a {
-    max-height: 40px;
-  }
-  .sidebar ul li {
-    margin: 0;
-    padding: 12px;
-  }
-  .sidebar ul li.active::before {
-    display: none;
-  }
-  .sidebar ul li.active::after {
-    display: none;
-  }
-  .topMenu {
-    max-width: 75%;
-    margin: 0 auto;
-  }
-  .topMenu div img {
-    width: 40px;
-  }
-  .topMenu div p {
-    font-size: 12px;
-  }
-  .topMenu div h5 {
-    font-size: 14px;
-  }
-  .profileImg {
-    width: 60px !important;
-    margin-top: 20px !important;
-  }
-  .sidebar h5 {
-    font-size: 14px;
-    margin: 10px 0;
-  }
-  .sidebar p {
-    font-size: 13px;
-  }
-  .topMenu > div {
-    border-left: none;
-  }
-  .circle-chart {
-    width: 30px !important;
-    height: 30px !important;
-  }
-  .question {
-    width: 100%;
-  }
-  .question > img {
-    width: 30%;
-  }
-  .question h5 {
-    font-size: 1rem;
-  }
-  .question p {
-    font-size: 0.8rem;
-    max-width: 70%;
-    margin: 8px 0;
-  }
-  .coursbtn svg {
-    width: 20px;
-  }
-  .coursbtn p {
-    font-size: 13px;
-  }
-  h4 {
-    font-size: 14px;
-    font-weight: bold;
-  }
-  h4 span {
-    width: 10px;
-    height: 10px;
-  }
-  h4 + a p {
-    font-size: 12px;
-    font-weight: bold;
-  }
-  #table p {
-    font-size: 13px;
-  }
-  .tr {
-    margin-top: 10px;
-  }
-  .thead p {
-    font-size: 10px;
-  }
+    main {
+        margin: 100px 0;
+    }
+    .sidebar {
+        width: 300px;
+        position: absolute;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        top: 0;
+        bottom: 0;
+        right: -500px;
+        z-index: 999999;
+        transition: all 0.4s ease-in;
+        box-shadow: -9px 10px 66px -5px rgba(0, 0, 0, 0.7);
+        -webkit-box-shadow: -9px 10px 66px -5px rgba(0, 0, 0, 0.7);
+        -moz-box-shadow: -9px 10px 66px -5px rgba(0, 0, 0, 0.7);
+    }
+    .modal-backdrop {
+        z-index: 99999;
+        opacity: 0.5;
+    }
+    .sidebar ul div {
+        margin-right: 12px;
+    }
+    .sidebar ul li a {
+        max-height: 40px;
+    }
+    .sidebar ul li {
+        margin: 0;
+        padding: 12px;
+    }
+    .sidebar ul li.active::before {
+        display: none;
+    }
+    .sidebar ul li.active::after {
+        display: none;
+    }
+    .topMenu {
+        max-width: 75%;
+        margin: 0 auto;
+    }
+    .topMenu div img {
+        width: 40px;
+    }
+    .topMenu div p {
+        font-size: 12px;
+    }
+    .topMenu div h5 {
+        font-size: 14px;
+    }
+    .profileImg {
+        width: 60px !important;
+        margin-top: 20px !important;
+    }
+    .sidebar h5 {
+        font-size: 14px;
+        margin: 10px 0;
+    }
+    .sidebar p {
+        font-size: 13px;
+    }
+    .topMenu > div {
+        border-left: none;
+    }
+    .circle-chart {
+        width: 30px !important;
+        height: 30px !important;
+    }
+    .question {
+        width: 100%;
+    }
+    .question > img {
+        width: 30%;
+    }
+    .question h5 {
+        font-size: 1rem;
+    }
+    .question p {
+        font-size: 0.8rem;
+        max-width: 70%;
+        margin: 8px 0;
+    }
+    .coursbtn svg {
+        width: 20px;
+    }
+    .coursbtn p {
+        font-size: 13px;
+    }
+    .qbtn {
+        width: 75% !important;
+    }
+    h4 {
+        font-size: 14px;
+        font-weight: bold;
+    }
+    h4 span {
+        width: 10px;
+        height: 10px;
+    }
+    h4 + a p {
+        font-size: 12px;
+        font-weight: bold;
+    }
+    #table p {
+        font-size: 13px;
+    }
+    .tr {
+        margin-top: 10px;
+    }
+    .thead p {
+        font-size: 10px;
+    }
 }
