--- a/public_html/frontend/css/profile.css
+++ b/public_html/frontend/css/profile.css
@@ -106,6 +106,11 @@ iframe {
     border-bottom: 1px solid #23bf64;
 }
 
+/* comments */
+.comment > div{
+    max-width: 370px;
+}
+  
 @media screen and (max-width: 425px) {
     .question > img {
         display: none;
