--- a/public_html/frontend/css/profile.css
+++ b/public_html/frontend/css/profile.css
@@ -2,9 +2,9 @@ main {
     margin: 6% 0;
     padding: 0 !important;
 }
-.sidebar {
+/*.sidebar {
     max-height: 750px;
-}
+}*/
 .sidebar .profileImg {
     width: 100px;
     margin: 4% 0;
