--- a/public_html/frontend/css/cart.css
+++ b/public_html/frontend/css/cart.css
@@ -1,6 +1,4 @@
-main {
-  margin: 8% 0;
-}
+
 .course {
   background: #0b141b;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -58,7 +56,7 @@ main {
 
 @media screen and (max-width: 768px) {
     main {
-        margin: 30% 0;
+        margin: 115px 0;
     }
     .course{
         flex-direction: column;
@@ -69,9 +67,12 @@ main {
     .course h4 {
         font-size: 20px;
     }
+
+    .course .left {
+       width: 100%;
+    }
     .course p{
         font-size: 14px;
-        text-align: center;
         padding: 8px 0;
     }
     .payment input {
