--- a/public_html/frontend/css/cart.css
+++ b/public_html/frontend/css/cart.css
@@ -1,55 +1,65 @@
+main {
+    margin: 110px auto;
+}
 
 .course {
-  background: #0b141b;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 17px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+    background: #0b141b;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 17px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
 }
+
 .course img {
-  max-width: 150px;
-  max-height: 150px;
-  border-radius: 4px;
+    max-width: 150px;
+    max-height: 150px;
+    border-radius: 4px;
 }
+
 .course .delete {
-  width: 30px;
-  height: 30px;
-  color: red;
-  border: 1px solid red;
-  border-radius: 100%;
-  padding: 3px;
-  transition: all 0.1s ease-in;
-  background-color: transparent;
+    width: 30px;
+    height: 30px;
+    color: red;
+    border: 1px solid red;
+    border-radius: 100%;
+    padding: 3px;
+    transition: all 0.1s ease-in;
+    background-color: transparent;
 }
+
 .course .delete svg {
     width: 20px;
-  transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
 }
+
 .course .delete:hover {
-  background: red;
+    background: red;
 }
+
 .course .delete:hover svg {
-  color: white;
+    color: white;
 }
 
 .payment {
-  background: #0b141b;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 17px;
-  padding: 30px;
+    background: #0b141b;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 17px;
+    padding: 30px;
 }
-.payment button{
+
+.payment button {
     transition: all .1s ease-in;
 }
-.payment button:hover{
+
+.payment button:hover {
     background-color: #fff !important;
     color: #23bf64 !important;
     border-radius: 10px !important;
 }
 
-.payment .price{
+.payment .price {
     border-top: 1px dashed #23bf64;
     border-bottom: 1px dashed #23bf64;
 }
@@ -58,30 +68,37 @@
     main {
         margin: 115px 0;
     }
-    .course{
+
+    .course {
         flex-direction: column;
     }
+
     .course img {
         margin-bottom: 10px;
     }
+
     .course h4 {
         font-size: 20px;
     }
 
     .course .left {
-       width: 100%;
+        width: 100%;
     }
-    .course p{
+
+    .course p {
         font-size: 14px;
         padding: 8px 0;
     }
+
     .payment input {
         width: 50% !important;
     }
-    .payment input::placeholder{
+
+    .payment input::placeholder {
         font-size: 10px;
     }
-    .payment svg{
+
+    .payment svg {
         width: 40px;
     }
 }
